--- a/frontend/src/app/components/publication-upload/publication-upload.component.html
+++ b/frontend/src/app/components/publication-upload/publication-upload.component.html
@@ -5,9 +5,17 @@
         <div class="d-flex justify-content-center">
             <label for="file">Choose Publication File: &nbsp;&nbsp;&nbsp;</label>
             <input type="file"
-                id="file"
-                (change)="handleFileInput($event.target.files)">
+                id="file2"
+                (change)="handlePublicationInput($event.target.files)">
         </div>
+
+        <div class="d-flex justify-content-center">
+            <label for="file">Add Cover Letter File: &nbsp;&nbsp;&nbsp;</label>
+            <input type="file"
+                id="file2"
+                (change)="handleCoverLetterInput($event.target.files)">
+        </div>
+
         <br/>
             <div class="col-lg">
                 <button class="btn btn-primary btn-block" id="submit" (click)="uploadFileToActivity()">Submit</button>          
