--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,6 +5,7 @@
     </div>
     <ul class= "navbar-nav">
       <li class = "nav-item"><a class= "nav-link" *ngIf="isAuthor()" (click)="uploadPublication()" id="upload_publication">Submit Scientific Publication</a></li>
+      <li class = "nav-item"><a class= "nav-link" *ngIf="isAuthor()" (click)="showPublications()" id="show_publications">My Publications</a></li>
       
     </ul>
     <ul class="nav navbar-nav navbar-right">
