--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -4,6 +4,7 @@
       <a class="navbar-brand" href="/main">XML Publications</a>
     </div>
     <ul class= "navbar-nav">
+      <li class = "nav-item"><a class= "nav-link" *ngIf="isEditor()" (click)="showWorkflows()" id="show_workflows">All Workflows</a></li>
       <li class = "nav-item"><a class= "nav-link" *ngIf="isAuthor()" (click)="uploadPublication()" id="upload_publication">Submit Scientific Publication</a></li>
       <li class = "nav-item"><a class= "nav-link" *ngIf="isAuthor()" (click)="showPublications()" id="show_publications">My Publications</a></li>
       
