frontend show and pdf scientific work download for reviewer and unauthenticated users

--- a/frontend/src/app/components/review-publications/review-publications.component.html
+++ b/frontend/src/app/components/review-publications/review-publications.component.html
@@ -19,7 +19,9 @@
                     <td>{{ publication.metadata.title}}</td>
                     <td>{{ publication.status}}</td>
                     <td>{{ publication.publicationId }}</td>
-                    <td><button type="button" class="btn btn-primary"  id="show"  ><i class="far fa-eye">Show Publication</i></button></td>
+                    <td><button type="button" class="btn btn-primary"  id="show"  (click)="onShowPublication(publication.publicationId)"><i class="far fa-eye">Show Publication</i></button></td>
+                    <td><button type="button" class="btn btn-primary" id="downloadPdf" (click)="getPdf(publication.publicationId)"><i>Download pdf</i></button></td>
+
                 </tr>
             </tbody>
         </table>
