--- a/frontend/src/app/components/accepted-publications/accepted-publications.component.html
+++ b/frontend/src/app/components/accepted-publications/accepted-publications.component.html
@@ -15,7 +15,8 @@
                 <tr *ngFor="let publication of publications; index as i">
                     <th scope="row">{{ i + 1 }}</th>
                     <td>{{ publication.metadata.title}}</td>
-                    <td><button type="button" class="btn btn-primary"  id="show"  ><i class="far fa-eye">Show Publication</i></button></td>
+                    <td><button type="button" class="btn btn-primary"  id="show" (click)="onShowPublication(publication.publicationId)"><i class="far fa-eye">Show Publication</i></button></td>
+                    <td><button type="button" class="btn btn-primary" id="downloadPdf" (click)="getPdf(publication.publicationId)"><i>Download pdf</i></button></td>
                 </tr>
             </tbody>
         </table>
