leaving review completed

--- a/frontend/src/app/components/review-publications/review-publications.component.html
+++ b/frontend/src/app/components/review-publications/review-publications.component.html
@@ -20,9 +20,13 @@
                     <td>{{ publication.status}}</td>
                     <td>{{ publication.publicationId }}</td>
                     <td><button type="button" class="btn btn-primary"  id="show"  (click)="onShowPublication(publication.publicationId)"><i class="far fa-eye">Show Publication</i></button></td>
+                    <td><button type="button" class="btn btn-primary"  id="review"  (click)="openForm(publication)"><i class="far fa-eye">Review</i></button></td>
                     <td><button type="button" class="btn btn-primary" id="downloadPdf" (click)="getPdf(publication.publicationId)"><i>Download pdf</i></button></td>
 
                 </tr>
             </tbody>
         </table>
+
+        <app-review-form *ngIf = "publicationChosen"></app-review-form>
+
     </div>
